--- a/Cubix/Cubix.csproj
+++ b/Cubix/Cubix.csproj
@@ -7,8 +7,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{1D5A3604-B1F0-4D52-B849-B292DDEAA143}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>RC.Crawler</RootNamespace>
-    <AssemblyName>RC.Crawler</AssemblyName>
+    <RootNamespace>Cubix</RootNamespace>
+    <AssemblyName>Cubix</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
