--- a/crawler/Crawler.csproj
+++ b/crawler/Crawler.csproj
@@ -7,8 +7,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{1D5A3604-B1F0-4D52-B849-B292DDEAA143}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Cubix</RootNamespace>
-    <AssemblyName>Cubix</AssemblyName>
+    <RootNamespace>Crawler</RootNamespace>
+    <AssemblyName>Crawler</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -38,7 +38,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>RC.Crawler.App</StartupObject>
+    <StartupObject>Crawler.App</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>ico.ico</ApplicationIcon>
