--- a/crawler/Crawler.csproj
+++ b/crawler/Crawler.csproj
@@ -17,6 +17,7 @@
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -41,7 +42,7 @@
     <StartupObject>Crawler.App</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>defaultico.ico</ApplicationIcon>
+    <ApplicationIcon>Default.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Costura, Version=5.3.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -219,6 +220,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Interfaces\ICrawler.cs" />
+    <Compile Include="Managers\CrawlerManager.cs" />
+    <Compile Include="Services\Cyberdrop.cs" />
+    <Compile Include="Services\Imgur.cs" />
+    <Compile Include="Services\4Chan.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -227,18 +233,15 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Library\Cyberdrop.cs" />
-    <Compile Include="Library\_4Chan.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Library\Imgur.cs" />
-    <Compile Include="Modules\AppManager.cs" />
-    <Compile Include="Modules\DownloadManager.cs" />
-    <Compile Include="Modules\RequestManager.cs" />
+    <Compile Include="Managers\UIManager.cs" />
+    <Compile Include="Managers\DownloadManager.cs" />
+    <Compile Include="Managers\RequestManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -266,10 +269,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="default.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="defaultico.ico" />
+    <Resource Include="Default.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.0.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.0.0\build\MaterialDesignThemes.targets')" />
